[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "stable_diffusion"
version = "0.0.1"
description = "Attempts to rewrite stable diffusion from scratch"
authors = [
  { name = "Daniel Claborne" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["stable_diffusion"]
force_sort_within_sections = true
